<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="romansytnyk.spacex.ui.launches.details.LaunchDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            tools:ignore="ContentDescription"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/infoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_info" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_flight_num" />

        <TextView
            android:id="@+id/timeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/launch_time" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Time" />

        <TextView
            android:id="@+id/startPlaceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/launch_place" />

        <TextView
            android:id="@+id/startPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Start Place" />

        <TextView
            android:id="@+id/firstStage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:text="@string/launch_first_stage"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/cores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="Cores" />

        <TextView
            android:id="@+id/secondStage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/launch_second_stage"
            android:visibility="gone"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/payload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="Payload" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            tools:text="Description"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/launchResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:text="Result"
            tools:visibility="visible" />

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtubePlayerView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:useWebUi="false"
            app:showFullScreenButton="true" />

        <Button
            android:id="@+id/articleLink"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/launch_article_link"
            android:textColor="@color/colorLink"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/redditLink"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/launch_reddit_link"
            android:textColor="@color/colorLink"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>
</ScrollView>
